--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <hr>
             <br>
             <h2>interests</h2>
-            <p class="aboutText">I either train in the gym/ boxing 4x a week, I like to listen to podcasts about tech/business, I enjoy going out with friends/family, I am currently learning javascript in depth.</p>
+            <p class="aboutText">I enjoy training in the gym/ boxing 4x a week, I like to listen to podcasts about tech/business, I enjoy going out with friends/family, I am currently learning javascript in depth.</p>
           </div>
         </div>
         </section>
