--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 
 
     <!-- navbar -->
+    <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent">
-        <div class="navbar-brand"> raihed ullah </div>
-          <div class="collapse navbar-collapse">
+        <div class="navbar-brand">
+          <!-- <div class="collapse navbar-collapse"> -->
             <ul class="navbar-nav">
+              <h1 class="logo">raihed ullah</h1>
               <li class="nav-item">
                 <a class="nav-link" href="#home">home</a>
               </li>
@@ -34,6 +36,8 @@
             </ul>
           </div>
       </nav>
+    </div>
+
 
       <section id="home">
         <div class="container">
