--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+
+<link href="http://www.cssscript.com/demo/circular-progress-bar-plain-html-css/css-circular-prog-bar.css" rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>Portfolio</title>
   </head>
   <body>
-
-
     <!-- navbar -->
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent">
@@ -51,7 +53,7 @@
         <div class="container">
           <div class="aboutSection">
             <h2>about me</h2>
-            <p class="aboutText">Hi my name is Raihed Ullah and I am an aspiring software engineer who has experience in front end. I am seeking an new opportunities to showcase my talent into a repuatable company, who is willing to grow me through my journey in tech. </p>
+            <p class="aboutText">Hi my name is Raihed Ullah, I am 18 years old. I am seeking an new opportunities to showcase my talent into a repuatable company, who is willing to grow me through my journey in tech. </p>
             <hr>
             <br>
             <h2>interests</h2>
@@ -114,7 +116,7 @@
 
    <!-- skills showccase -->
 
-   <div class="container-fluid">
+   <!-- <div class="container-fluid">
     <div class="row showcase">
       <div class="container">
         <div class="row">
@@ -142,7 +144,75 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
+
+
+<div class="showcase"></div>
+  <div class="container text-center">
+    <h1>skills</h1>
+<hr>
+    <div class="row">
+        <div class="col-md-3 col-sm-6">
+            <div class="progress yellow">
+                <span class="progress-left">
+                    <span class="progress-bar"></span>
+                </span>
+                <span class="progress-right">
+                    <span class="progress-bar"></span>
+                </span>
+                <div class="progress-value">70%</div>
+                <div class="progress-value3">BOOTSTRAP</div>
+
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="progress yellow">
+              <span class="progress-left">
+                  <span class="progress-bar"></span>
+              </span>
+              <span class="progress-right">
+                  <span class="progress-bar"></span>
+              </span>
+              <div class="progress-value">55%</div>
+              <div class="progress-value4">JS</div>
+
+          </div>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <div class="progress yellow">
+            <span class="progress-left">
+                <span class="progress-bar"></span>
+            </span>
+            <span class="progress-right">
+                <span class="progress-bar"></span>
+            </span>
+            <div class="progress-value">80%</div>
+            <div class="progress-value2">CSS</div>
+
+        </div>
+    </div>
+ 
+        <div class="col-md-3 col-sm-6">
+            <div class="progress yellow">
+                <span class="progress-left">
+                    <span class="progress-bar"></span>
+                </span>
+                <span class="progress-right">
+                    <span class="progress-bar"></span>
+                </span>
+                <div class="progress-value">85%</div>
+                <div class="progress-value2">HTML</div>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container btn4 text-center ">
+<a href="./img/" download>
+  <button type="button" class="btn btn2 btn-primary btn">Download CV</button>
+</a>
+</div>
 
       <!-- projects -->
 
