--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 </div>
 
 <div class="container btn4 text-center ">
-<a href="./img/" download>
+<a href="./img/RAIHED ULLAH CV copy.pdf" download>
   <button type="button" class="btn btn2 btn-primary btn">Download CV</button>
 </a>
 </div>
