--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="container">
           <div class="aboutSection">
             <h2>about me</h2>
-            <p class="aboutText">Hi my name is Raihed Ullah, I am 18 years old. I am seeking an new opportunities to showcase my talent into a repuatable company, who is willing to grow me through my journey in tech. </p>
+            <p class="aboutText">Hi my name is Raihed Ullah, I am 18 years old, who has a passion for Javascript. I am seeking an new opportunities to showcase my talent into a repuatable company, who is willing to grow me through my journey into a full stack role. </p>
             <hr>
             <br>
             <h2>interests</h2>
@@ -160,8 +160,8 @@
                 <span class="progress-right">
                     <span class="progress-bar"></span>
                 </span>
-                <div class="progress-value">70%</div>
-                <div class="progress-value3">BOOTSTRAP</div>
+                <!-- <div class="progress-value">70%</div> -->
+                <div class="progress-value1">BOOTSTRAP</div>
 
             </div>
         </div>
@@ -173,8 +173,8 @@
               <span class="progress-right">
                   <span class="progress-bar"></span>
               </span>
-              <div class="progress-value">55%</div>
-              <div class="progress-value4">JS</div>
+              <!-- <div class="progress-value">55%</div> -->
+              <div class="progress-value">JS</div>
 
           </div>
       </div>
@@ -186,8 +186,8 @@
             <span class="progress-right">
                 <span class="progress-bar"></span>
             </span>
-            <div class="progress-value">80%</div>
-            <div class="progress-value2">CSS</div>
+            <!-- <div class="progress-value">80%</div> -->
+            <div class="progress-value">CSS</div>
 
         </div>
     </div>
@@ -200,8 +200,8 @@
                 <span class="progress-right">
                     <span class="progress-bar"></span>
                 </span>
-                <div class="progress-value">85%</div>
-                <div class="progress-value2">HTML</div>
+                <!-- <div class="progress-value">85%</div> -->
+                <div class="progress-value">HTML</div>
 
             </div>
         </div>
