--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="stylesheet.css">
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>Portfolio</title>
+
+    <!-- icon -->
+    <link rel="icon" href="img/icon.png">
   </head>
   <body>
     <!-- navbar -->
