--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <link href="http://www.cssscript.com/demo/circular-progress-bar-plain-html-css/css-circular-prog-bar.css" rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="stylesheet.css">
-    <script src="https://unpkg.com/scrollreveal"></script>
     <title>Portfolio</title>
 
     <!-- icon -->
@@ -56,11 +55,16 @@
         <div class="container">
           <div class="aboutSection">
             <h2>about me</h2>
-            <p class="aboutText">Hi my name is Raihed Ullah, I am 18 years old. I come from a background of Art & Design. I am on a mission to pursue a career in software development!</p>
+            <p class="aboutText">
+              Hi my name is Raihed Ullah, I am 18 years old. 
+              I come from a background of Art & Design. 
+              My passion for tech allows me to be creative and problem solve, 
+              not only that but it also allows me to have a wider perspective on how things work.
+              Thats why I am on a mission to pursue a career in software development!</p>
             <hr>
             <br>
             <h2>interests</h2>
-            <p class="aboutText">Things I Enjoy: Like to stay fit(boxing/ gym), podcasts(tech/business), travelling. Currently: Making a secret messaging app.  </p>
+            <p class="aboutText">Things I Enjoy: Like to stay fit(boxing/ gym), podcasts(tech/business), travelling. Currently: Building a secret messaging app.  </p>
           </div>
         </div>
         </section>
@@ -123,8 +127,39 @@
 
             </div>
         </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="row">
+          <div class="progress yellow ">
+              <span class="progress-left">
+                  <span class="progress-bar"></span>
+              </span>
+              <span class="progress-right">
+                  <span class="progress-bar"></span>
+              </span>
+              <!-- <div class="progress-value">85%</div> -->
+              <div class="progress-value" style="font-size: 12px;">ADOBE SUITE</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3 col-sm-6">
+          <div class="row">
+          <div class="progress yellow ">
+              <span class="progress-left">
+                  <span class="progress-bar"></span>
+              </span>
+              <span class="progress-right">
+                  <span class="progress-bar"></span>
+              </span>
+              <!-- <div class="progress-value">85%</div> -->
+              <div class="progress-value" style="font-size: 15px;">GIT/GITHUB</div>
+            </div>
+          </div>
+        </div>
+
     </div>
 </div>
+
 
 <div class="container btn4 text-center ">
 <a href="./img/RAIHED ULLAH CV copy.pdf" download>
@@ -143,7 +178,7 @@
         <div class="row featuretteR">
           <div class="col-md-7">
             <h2 class="featurette-heading">TASK PLANNER</h2>
-            <p class="featurette-text">Management system that organises tasks in a team.</p>
+            <p class="featurette-text" style="font-size: 20px;">Management system that organises tasks assigned to individuals.</p>
             <a href="https://task-planner101.netlify.app">
               <button type="button" class="btn btn2 btn-primary btn round">live</button>
             </a>
@@ -153,6 +188,22 @@
           </div>
           <div class="col-md-5">
             <img src="./img/placeholder img.png" class="featurette-image img-fluid mx-auto img1" alt="TaskPlannerProject">
+          </div>
+        </div>
+        <!--  -->
+        <div class="row featuretteL">
+          <div class="col-md-7 order-md-2">
+            <h2 class="featurette-heading"> Book Publishing Website</h2>
+            <p class="featurette-text" style="font-size: 20px;">Fully responsive website made in Boostrap 4.</p>
+            <a href="https://book-publishing-website.netlify.app/">
+              <button type="button" class="btn btn2 btn-primary btn round">live</button>
+            </a>
+            <a href="https://github.com/raihed101/Bootstrap_wesbite">
+              <button type="button" class="btn btn2 btn-primary btn round">code</button>
+            </a>  
+          </div>
+          <div class="col-md-5">
+            <img src="./img/project2.png" class="featurette-image img-fluid mx-auto img2" alt="Bootstrap website">
           </div>
         </div>
         <!-- <div class="row featuretteL">
@@ -212,6 +263,7 @@
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
 
   <!-- Option 2: jQuery, Popper.js, and Bootstrap JS -->
+  <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
