--- a/index.html
+++ b/index.html
@@ -56,12 +56,9 @@
           <div class="aboutSection">
             <h2>about me</h2>
             <p class="aboutText">
-              Hi my name is Raihed Ullah, I am 18 years old. 
-              I come from a background of Art & Design. 
-              My passion for tech allows me to be creative and problem solve, 
-              not only that but it also allows me to have a wider perspective on how things work.
-              Thats why I am on a mission to pursue a career in software development!</p>
-            <hr>
+              Hi my name is Raihed Ullah, I am 18 years old.
+              I have a passion for coding and visual design. I'm seeking an apprenticeship in software engineering. </p>
+            <hr> 
             <br>
             <h2>interests</h2>
             <p class="aboutText">Things I Enjoy: Like to stay fit(boxing/ gym), podcasts(tech/business), travelling. Currently: Building a secret messaging app.  </p>
