--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
             <h2>about me</h2>
             <p class="aboutText">
               Hi my name is Raihed Ullah, I am 18 years old.
-              I have a passion for coding and visual design. I'm seeking an apprenticeship in software engineering. </p>
+              I've always been curious on how things work. 
+              I'm always learning and making sure I'm well 
+              prepared for an software engineer apprenticeship! </p>
             <hr> 
             <br>
             <h2>interests</h2>
