added html element

--- a/index.html
+++ b/index.html
@@ -56,14 +56,10 @@
           <div class="aboutSection">
             <h2>about me</h2>
             <p class="aboutText">
-              Hi my name is Raihed Ullah, I am 18 years old.
-              I've always been curious on how things work. 
-              I'm always learning and making sure I'm well 
+              Hi my name is Raihed Ullah, I am 18 years old. I have a background of Art & Design
+              I've always been fascinated by how the process of things came together,
+              which is why I'm always learning and making sure I'm well 
               prepared for an software engineer apprenticeship! </p>
-            <hr> 
-            <br>
-            <h2>interests</h2>
-            <p class="aboutText">Things I Enjoy: Like to stay fit(boxing/ gym), podcasts(tech/business), travelling. Currently: Building a secret messaging app.  </p>
           </div>
         </div>
         </section>
@@ -203,6 +199,22 @@
           </div>
           <div class="col-md-5">
             <img src="./img/project2.png" class="featurette-image img-fluid mx-auto img2" alt="Bootstrap website">
+          </div>
+        </div>
+        <!--  -->
+        <div class="row featuretteR">
+          <div class="col-md-7 order-md-2">
+            <h2 class="featurette-heading">Secret Messenging Application</h2>
+            <p class="featurette-text" style="font-size: 20px;">Currently in progress.</p>
+            <a href="">
+              <button type="button" class="btn btn2 btn-primary btn round">live</button>
+            </a>
+            <a href="">
+              <button type="button" class="btn btn2 btn-primary btn round">code</button>
+            </a>  
+          </div>
+          <div class="col-md-5">
+            <img src="./img/cs.jpg" class="featurette-image img-fluid mx-auto img2" alt="">
           </div>
         </div>
         <!-- <div class="row featuretteL">
