--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         </div>
         <!--  -->
         <div class="row featuretteR">
-          <div class="col-md-7 order-md-2">
+          <div class="col-md-7">
             <h2 class="featurette-heading">Secret Messenging Application</h2>
             <p class="featurette-text" style="font-size: 20px;">Currently in progress.</p>
             <a href="">
