--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <p class="aboutText">
               Hi my name is Raihed Ullah, I am 18 years old. I have a background of Art & Design
               I've always been fascinated by how the process of things came together,
-              which is why I'm always learning and making sure I'm well 
-              prepared for an software engineer apprenticeship! </p>
+              which led me on in starting a career in tech. I'm continously learning everyday, improving my 
+              coding ability making sure I'm prepared for an apprenticeship! </p>
           </div>
         </div>
         </section>
