--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <p class="aboutText">
               Hi my name is Raihed Ullah, I am 18 years old. I have a background of Art & Design
               I've always been fascinated by how the process of things came together,
-              which led me on in starting a career in tech. I'm continously learning everyday, improving my 
+              which led me on in starting a career in software engineering. I'm continously learning everyday, improving my 
               coding ability making sure I'm prepared for an apprenticeship! </p>
           </div>
         </div>
