updated spelling mistake

--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
         <div class="navbar-brand">
           <!-- <div class="collapse navbar-collapse"> -->
             <ul class="navbar-nav">
-              <h1 class="logo">raihed ullah</h1>
+              <h1 class="logo">Raihed Ullah</h1>
               <li class="nav-item">
-                <a class="nav-link" href="#home">home</a>
+                <a class="nav-link" href="#home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#aboutme">about me</a>
+                <a class="nav-link" href="#aboutme">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#projects">projects</a>
+                <a class="nav-link" href="#projects">Projects</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="#contact">contact</a>
+                  <a class="nav-link" href="#contact">Contact</a>
             </ul>
           </div>
       </nav>
@@ -54,7 +54,7 @@
       <section id="aboutme">
         <div class="container">
           <div class="aboutSection">
-            <h2>about me</h2>
+            <h2>About Me</h2>
             <p class="aboutText">
               Hi my name is Raihed Ullah,
               I've always been fascinated by how the process of things came together,
@@ -66,7 +66,7 @@
 
 <div class="showcase"></div>
   <div class="container text-center">
-    <h1>skills</h1>
+    <h1>Skills</h1>
 <hr>
     <div class="row">
         <div class="col-md-3 col-sm-6">
@@ -166,7 +166,7 @@
 
       <section id="projects">
         <div class="container">
-          <h1 class="projectSec text-center">projects</h1>
+          <h1 class="projectSec text-center">Projects</h1>
           <br>
           <hr class="featurette-divider">
           <br>
@@ -256,7 +256,7 @@
 
       <section id="contact">
         <div class="container text-center">
-          <h1 class="contact">contact</h1>
+          <h1 class="contact">Contact</h1>
           <hr>
         </div>
       </section>
