--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a class="nav-link" href="#home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#aboutme">About me</a>
+                <a class="nav-link" href="#aboutme">About Me</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#projects">Projects</a>
