--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           Hi my name is Raihed Ullah,
           I've always been fascinated by how the process of things came together,
           which led me on in starting a career in software engineering. I'm continously learning everyday, improving my
-          coding ability making sure I'm prepared for an apprenticeship! </p>
+          coding ability making sure I'm prepared for an entry role. </p>
       </div>
     </div>
   </section>
