--- a/index.html
+++ b/index.html
@@ -157,6 +157,22 @@
         </div>
       </div>
 
+      <div class="col-md-3 col-sm-6">
+        <div class="row">
+          <div class="progress yellow ">
+            <span class="progress-left">
+              <span class="progress-bar"></span>
+            </span>
+            <span class="progress-right">
+              <span class="progress-bar"></span>
+            </span>
+            <!-- <div class="progress-value">85%</div> -->
+            <div class="progress-value" style="font-size: 12px;">REACT/REDUX</div>
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </div>
 
