--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
       <div class="row featuretteR">
         <div class="col-md-7">
           <h2 class="featurette-heading">Secret Messenging App</h2>
-          <p class="featurette-text" style="font-size: 20px;">Helps you create and send secret messages to your
-            friends.</p>
+          <p class="featurette-text" style="font-size: 20px;">Create and send secret messages to your
+            friends!</p>
           <a href="https://secret-message-app-sigma.vercel.app/">
             <button type="button" class="btn btn2 btn-primary btn round">live</button>
           </a>
