--- a/index.html
+++ b/index.html
@@ -61,10 +61,8 @@
       <div class="aboutSection">
         <h2>About Me</h2>
         <p class="aboutText">
-          Hi my name is Raihed Ullah,
-          I've always been fascinated by how the process of things came together,
-          which led me on in starting a career in software engineering. I'm continously learning everyday, improving my
-          coding ability making sure I'm prepared for an entry role. </p>
+          Hi my name is Raihed. I love designing & building new things. My passion comes from being able to develop and
+          learn everyday. Have a look at my projects below, enjoy!</p>
       </div>
     </div>
   </section>
@@ -167,7 +165,7 @@
               <span class="progress-bar"></span>
             </span>
             <!-- <div class="progress-value">85%</div> -->
-            <div class="progress-value" style="font-size: 12px;">REACT/REDUX</div>
+            <div class="progress-value" style="font-size: 23px;">REACT</div>
           </div>
         </div>
       </div>
