--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
         </div>
       </div>
 
+
+
       <div class="col-md-3 col-sm-6">
         <div class="row">
           <div class="progress yellow ">
@@ -169,8 +171,6 @@
           </div>
         </div>
       </div>
-
-
     </div>
   </div>
 
@@ -265,7 +265,7 @@
         <div class="row featuretteL">
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">Project</h2>
-            <p class="featurette-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, enim expedita itaque, quae aspernatur repellendus dolorem laudantium, perferendis magni molestias sint! Blanditiis tempora et, eligendi ullam hic odio consequatur est.</p>
+            <p class="featurette,-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, enim expedita itaque, quae aspernatur repellendus dolorem laudantium, perferendis magni molestias sint! Blanditiis tempora et, eligendi ullam hic odio consequatur est.</p>
             <button type="button" class="btn btn2 btn-primary btn round" a href="#">live</a></button>
             <button type="button" class="btn btn2 btn-primary btn round" a href="#"></a>code</a></button>
           </div>
