--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
       <div class="navbar-brand">
         <!-- <div class="collapse navbar-collapse"> -->
         <ul class="navbar-nav">
-          <h1 class="logo">Raihed Ullah</h1>
+          <h1 class="logo">RAIHED ULLAH</h1>
           <li class="nav-item">
-            <a class="nav-link" href="#home">Home</a>
+            <a class="nav-link" href="#home">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#aboutme">About Me</a>
+            <a class="nav-link" href="#aboutme">ABOUT ME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#projects">Projects</a>
+            <a class="nav-link" href="#projects">PROJECTS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
+            <a class="nav-link" href="#contact">CONTACT</a>
         </ul>
       </div>
     </nav>
@@ -59,7 +59,7 @@
   <section id="aboutme">
     <div class="container">
       <div class="aboutSection">
-        <h2>About Me</h2>
+        <h2>ABOUT ME</h2>
         <p class="aboutText">
           Hi my name is Raihed. I love designing & building new things. My passion comes from being able to develop and
           learn everyday. Have a look at my projects below, enjoy!</p>
@@ -69,7 +69,7 @@
 
   <div class="showcase"></div>
   <div class="container text-center">
-    <h1>Skills</h1>
+    <h1>SKILLS</h1>
     <hr>
     <div class="row">
       <div class="col-md-3 col-sm-6">
@@ -177,7 +177,7 @@
 
   <div class="container btn4 text-center ">
     <a href="./img/RAIHED ULLAH CV copy.pdf" download>
-      <button type="button" class="btn btn2 btn-primary btn">Download CV</button>
+      <button type="button" class="btn btn2 btn-primary btn">DOWNLOAD CV</button>
     </a>
   </div>
 
@@ -185,7 +185,7 @@
 
   <section id="projects">
     <div class="container">
-      <h1 class="projectSec text-center">Projects</h1>
+      <h1 class="projectSec text-center">PROJECTS</h1>
       <br>
       <hr class="featurette-divider">
       <br>
@@ -195,10 +195,10 @@
           <p class="featurette-text" style="font-size: 20px;">Management system that organises tasks assigned to
             individuals.</p>
           <a href="https://task-planner101.netlify.app">
-            <button type="button" class="btn btn2 btn-primary btn round">live</button>
+            <button type="button" class="btn btn2 btn-primary btn round">LIVE</button>
           </a>
           <a href="https://github.com/raihed101/plannerTask">
-            <button type="button" class="btn btn2 btn-primary btn round">code</button>
+            <button type="button" class="btn btn2 btn-primary btn round">CODE</button>
           </a>
         </div>
         <div class="col-md-5">
@@ -211,10 +211,10 @@
           <h2 class="featurette-heading"> Book Publishing Website</h2>
           <p class="featurette-text" style="font-size: 20px;">Fully responsive website made in Boostrap 4.</p>
           <a href="https://book-publishing-website.netlify.app/">
-            <button type="button" class="btn btn2 btn-primary btn round">live</button>
+            <button type="button" class="btn btn2 btn-primary btn round">LIVE</button>
           </a>
           <a href="https://github.com/raihed101/Bootstrap_wesbite">
-            <button type="button" class="btn btn2 btn-primary btn round">code</button>
+            <button type="button" class="btn btn2 btn-primary btn round">CODE</button>
           </a>
         </div>
         <div class="col-md-5">
@@ -228,10 +228,10 @@
           <p class="featurette-text" style="font-size: 20px;">Create and send secret messages to your
             friends!</p>
           <a href="https://secret-message-app-sigma.vercel.app/">
-            <button type="button" class="btn btn2 btn-primary btn round">live</button>
+            <button type="button" class="btn btn2 btn-primary btn round">LIVE</button>
           </a>
           <a href="https://github.com/raihed101/secret_message_app">
-            <button type="button" class="btn btn2 btn-primary btn round">code</button>
+            <button type="button" class="btn btn2 btn-primary btn round">LIVE</button>
           </a>
         </div>
         <div class="col-md-5">
@@ -278,7 +278,7 @@
 
   <section id="contact">
     <div class="container text-center">
-      <h1 class="contact">Contact</h1>
+      <h1 class="contact">CONTACT</h1>
       <hr>
     </div>
   </section>
